--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "Mitch Tuck aka matuck",
   "license": "MIT",
   "dependencies": {
+    "gulp": "^3.9.1",
+    "gulp-exec": "^2.1.2",
+    "gulp-nodemon": "^2.2.1",
     "hapi": "^15.1.1",
     "hapi-config": "^0.2.2",
     "hapi-io": "^0.1.0",
@@ -21,6 +24,9 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-latest": "^6.16.0",
+    "gulp-babel": "^6.1.2",
+    "gulp-clean": "^0.3.2",
+    "gulp-mocha": "^3.0.1",
     "webpack": "^1.13.2"
   },
   "keywords": [],
