--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-babel": "^6.1.2",
     "gulp-clean": "^0.3.2",
     "gulp-mocha": "^3.0.1",
+    "request-mocha": "^0.2.0",
     "webpack": "^1.13.2"
   },
   "keywords": [],
