--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "hapi-io": "^0.1.0",
     "mysql2": "^1.1.1",
     "sequelize": "^3.24.3",
-    "sqlite3": "^3.1.6"
+    "sqlite3": "^3.1.6",
+    "winston": "^2.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.16.0",
